@@ -57,7 +57,6 @@
                 <configuration>
                     <source>21</source>
                     <target>21</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -78,9 +77,17 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>org.main.App</mainClass>
+                            <mainClass>com.solvd.financialinstituion.main.App</mainClass>
                         </manifest>
                     </archive>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.1.0</version>
+                <configuration>
+                    <mainClass>com.solvd.financialinstituion.main.App</mainClass>
                 </configuration>
             </plugin>
         </plugins>
